# Ascension-Old

./: .gitignore  Readme.md
Cloud/: Readme.md  pom.xml
Cloud/src/main/kotlin/: UserManager.kt  commands.kt  common.kt  knowledge.kt  strategy.kt
Cloud/src/main/kotlin/main/: Application.kt  HtmlController.kt
Cloud/src/main/kotlin/modules/common/: Trackable.kt
Cloud/src/main/kotlin/modules/strategy/: Goal.kt
Desktop/: CMakeLists.txt  Readme.md
Desktop/meshes/: transform.py  vertex.py
Desktop/programs/framebuffer/: fragment.glsl  geometry.glsl
Desktop/programs/gradient_background/: fragment.glsl  geometry.glsl
Desktop/programs/home/: fragment.glsl  vertex.glsl
Desktop/src/: code_organizers.h  main.cpp
Desktop/src/constants/: constants.cpp  constants.h
Desktop/src/graphics/: gl.cpp  graphics.cpp  graphics.h  program.cpp
Desktop/src/graphics/Framebuffer/: Framebuffer.cpp  Framebuffer.h
Desktop/src/graphics/Mainframe/: Mainframe.cpp  Mainframe.h
Desktop/src/graphics/animation/: animation.cpp  animation.h
Desktop/src/graphics/ascml/: AscmlApi.cpp  AscmlApi.h  CMakeLists.txt
Desktop/src/graphics/ascml/objects/: ObjectBase.h  Point.ascmlo  TestObject.ascmlo
Desktop/src/graphics/ascml/py/: cmake.py  objects.parser.py
Desktop/src/graphics/ascml/scenes/Base/: Base.cpp
Desktop/src/graphics/ascml/scenes/Home/: Home.ascml  Home.cpp  Home.h
Desktop/src/graphics/elements/Mesh/: Mesh.cpp  Mesh.h
Desktop/src/graphics/elements/composite/GradientBackground/: GradientBackground.cpp  GradientBackground.h  Point.cpp
Desktop/src/graphics/loaders/: loaders.h
Desktop/src/graphics/resources/: elements.cpp  elements.h
Desktop/src/graphics/resources/VAO/: VAO.cpp  VAO.h
Desktop/src/graphics/resources/objects/: Base.h
Desktop/src/graphics/resources/objects/Figure/: Figure.cpp  Figure.h
Desktop/src/graphics/resources/objects/GradientBackgorund/: GradientBackground.cpp  GradientBackground.h
Desktop/src/graphics/resources/objects/Point/: Point.cpp  Point.h
Desktop/src/graphics/scenes/: Base.h  SceneBase.h
Desktop/src/graphics/scenes/Home/: Home.cpp  Home.h
Desktop/src/graphics/scenes/keys/: keys.cpp  keys.h
Desktop/src/graphics/scenes/overlays/: Modules.cpp  Modules.h
Desktop/src/graphics/scenes/transitions/: HomeOverlay_tr.cpp  HomeOverlay_tr.h
Desktop/src/util/: Bezier.h  FString.cpp  FString.h  Singleton.h  linked_map.h  list.h  literals.h  map.h  math.h  proxy.h  util.cpp  util.h
Web/: package-lock.json  package.json
Web/src/: fonts.scss  index.html  styles.scss
Web/src/app/: app.component.html  app.component.ts  background.component.ts  centered.component.ts
Web/src/app/entities/: goal.ts  point.ts
Web/src/app/modules/: modules.service.ts
Web/src/app/modules/home/: home.component.html  home.component.scss
Web/src/app/modules/knowledge/: knowledge.component.ts
Web/src/app/modules/strategy/: strategy.component.html  strategy.component.scss  strategy.component.ts
Web/src/app/modules/strategy/big-picture/: big-picture.component.html  big-picture.component.ts
Web/src/app/modules/strategy/big-picture/goal/: goal.component.html  goal.component.scss  goal.component.ts
Web/src/app/modules/strategy/big-picture/goal-edit/: goal-edit.component.html  goal-edit.component.scss  goal-edit.component.ts
Web/src/app/modules/strategy/routine/: routine.component.html  routine.component.ts
Web/src/app/modules/strategy/stages/: stages.component.html  stages.component.ts
Web/src/app/overlay/: overlay.component.html  overlay.component.scss  overlay.component.ts
Web/src/app/overlay/modules-overlay/: modules-overlay.component.html  modules-overlay.component.spec.ts  modules-overlay.component.ts
Web/src/app/overlay/search-overlay/: search-overlay.component.scss  search-overlay.component.spec.ts  search-overlay.component.ts
Web/src/app/pipes/: transform.pipe.ts
Web/src/app/search/: search.component.html  search.component.ts
Web/src/app/services/: modules-controller.service.spec.ts  modules-controller.service.ts
Web/src/app/util/: util.ts
